New abstract class IrpObject. Misc.